# imskaper

./: .gitignore  MANIFEST.in  README.md  __init__.py  comparison_schemes.py  config.json  experiment.py  main.py  model_comparison.py  requirements.txt  setup.cfg  setup.py  tox.ini
examples/: main.py
experiment/: comparison_schemes.py  experiment.py  model_comparison.py
features_extraction/: LBP3d.py  feature_extraction.py  feature_extraction_binWidth.py  feature_extraction_matlab_temp.py  template.csv  template_binWidth.csv
src/imskaper/experiment/: comparison_schemes.py  experiment.py  model_comparison.py
src/imskaper/features_extraction/: LBP3d.py  feature_extraction.py  rotation_invariant_pattern.txt
src/imskaper/script/: feature_selection.py
src/imskaper/utils/: __init__.py  features_selectors.py
src/imskaper/validations/: schema.json  validate_config.py
tests/: test_config.json  test_config_file.py  test_dataset.csv  test_experiment.py  test_utils.py
utils/: __init__.py  classifiers.py  features_selectors.py  formatting.py  ioutil.py
validations/: schema.json  validate_config.py
