[metadata]
name = imskaper
keywords=imskaper,features extractions,pyradiomics
version = 0.0.2
license = "MIT license",
description = Radiomics features extractions and analysis tools
long_description = file: README.md
author = Ahmed Albuni,Ngoc Huynh
author_email = ahmed.albuni@gmail.com,ngoc.huynh.bao@nmbu.no
url=https://github.com/NMBU-Data-Science/imskaper
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    jsonschema
    skrebate
    radiomics
    lightgbm
    seaborn
    matplotlib
    tqdm
    six
    SimpleITK
    pyradiomics
    numpy
    scipy
    pandas
    joblib
    scikit-learn
    skfeature-chappers
    nibabel

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.json

[options.entry_points]
console_scripts =
    imskaper_feature_extraction = imskaper.features_extraction.feature_extraction:imskaper_feature_extract

[bdist_wheel]
universal = 1


[flake8]
exclude = docs
max-line-length = 79
